<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IFDTC Workshop</string>
    <string name="action_settings">Settings</string>
    <string name="action_closeTitle">Close</string>
    <string name="takePictureButtonText">Take Picture</string>
    <string name="enterAgeButtonText">Enter Age</string>
    <string name="sendButtonText">Send</string>
    <string name="title_activity_age">AgeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ageDone">Done</string>
    <string name="enterGpsButtonText">Get Location</string>

    <string-array name="age_array">
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string name="title_activity_Age">Age Activity</string>
    <string name="title_activity_location">Location Activity</string>
    <string name="title_activity_human">HumanActivity</string>
    <string name="humanSwitchText">Are you human?</string>
    <string name="enterHumanButtonText">Are You Human?</string>
    <string name="title_activity_open_end">OpenEndActivity</string>
    <string name="openEndTextHint">Enter some text</string>
    <string name="enterOpenEndButtonText">Open End</string>

</resources>
